<resources>
    <string name="app_name">ResearchHelper</string>
    <string name="emailString">Email</string>
    <string name="passwordString">Password</string>
    <string name="loginString">Login</string>
    <string name="titleString">Title</string>
    <string name="userExample">Name: Ruan \nEmail: Ruan@sexygirl.co.za \nResearchGroup: sexyGirl \nUnits Earned: 0.5</string>
    <string name="title_activity_view_publications">View Publications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="Sort_alpha">Sort alphabetically</string>
    <string name="Sort_date">Sort by date created</string>
    <string name="sort_alp_asc">A - Z</string>
    <string name="sort_alp_desc">Z - A</string>
    <string name="sort_date_asc">Newest - Oldest</string>
    <string name="sort_date_desc">Oldest - Newest</string>
    <string name="searchbar_text">Search by name, research group or status</string>
    <resources>
    <string name="app_name">Research System</string>
    <string name="title_activity_publications">Publications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="pub_name">Name of Publication</string>
    <string name="pub_owner">Name of Owner</string>
    <string name="pub_type">Book, Journal etc...</string>
    <string name="pub_vision">Envisioned Date - dd-mm-yyyy</string>
    <string name="pub_url">Publication URL</string>
    <string name="pub_author">Add each Author on a new line</string>
    <string name="pub_submit">Submit</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_publication">Add Publication</string>
    <string name="title_activity_view_publications">View Publications</string>
    <string name="logout">Sign Out</string>
    <string name="title_activity_add_publication_as_super">Add Publication</string>
    <string name="menu_activity">Menu</string>
    <string-array name="state_array">
        <item>In Progress</item>
        <item>Submitted</item>
        <item>InRevision</item>
        <item>Rejected</item>
        <item>Published</item>
        <item>Abandoned</item>
    </string-array>
    <string name="title_activity_add_publication_as_super_landscape">
        Add Publication
    </string>
    <string name="title_activity_add_publication_landscape">AddPublication_landscape</string>
    <string name="title_activity_edit_publication">EditPublication</string>
    <string name="title_activity_main">MainActivity</string>
</resources>

