<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="55dp">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:showIn="@layout/activity_add_publication"
        android:id="@+id/add_publication">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit"
            android:hint="@string/pub_name"
            android:textColor="#000"
            android:textSize="18dp"
            android:enabled="false"
            android:text="Paper 1"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/owner_edit"
            android:hint="@string/pub_owner"
            android:enabled="false"
            android:textColor="#000"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="whatever"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_edit"
            android:hint="@string/pub_type"
            android:textColor="#000"
            android:enabled="false"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Journal"
            android:singleLine="true" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/state_edit"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:enabled="false"
            android:id="@+id/date_edit"
            android:hint="@string/pub_vision"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="01-01-01"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/url_edit"
            android:hint="@string/pub_url"
            android:enabled="false"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="www.swagg.com"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/btnEdit"
            android:maxHeight="10dp"
            android:longClickable="false"
            android:layout_marginTop="35dp"
            android:onClick="oneditclick"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/btnCan"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_gravity="center_horizontal"

            android:onClick="cancelClick"
            android:singleLine="true" />
    </LinearLayout>
</ScrollView>