<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codinginfinity.android.LoginActivity"
    android:background="#dcdcdc">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_email"
        android:layout_above="@+id/edt_password"
        android:layout_alignLeft="@+id/edt_password"
        android:layout_alignStart="@+id/edt_password"
        android:layout_marginBottom="85dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginString"
        android:id="@+id/btn_login"
        android:layout_below="@+id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:onClick="loginFunction"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailString"
        android:id="@+id/textView"
        android:layout_above="@+id/edt_email"
        android:layout_alignLeft="@+id/edt_email"
        android:layout_alignStart="@+id/edt_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordString"
        android:id="@+id/textView2"
        android:layout_above="@+id/edt_password"
        android:layout_alignLeft="@+id/edt_password"
        android:layout_alignStart="@+id/edt_password" />

</RelativeLayout>
