<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="?attr/actionBarSize">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/edit_pub"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.codinginfinity.android.EditPublication"
        tools:showIn="@layout/activity_edit_publication"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit"
            android:hint="@string/pub_name"
            android:textColor="#000"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/owner_edit"
            android:hint="@string/pub_owner"
            android:textColor="#000"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_edit"
            android:hint="@string/pub_type"
            android:textColor="#000"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/state_edit"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_edit"
            android:hint="@string/pub_vision"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/url_edit"
            android:hint="@string/pub_url"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:id="@+id/linearLayout1">
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/linearLayout2">
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/btnEdit"
            android:maxHeight="10dp"
            android:longClickable="false"
            android:layout_marginTop="35dp"
            android:onClick="oneditclick"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/btnCan"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_gravity="center_horizontal"

            android:onClick="cancelClick"
            android:singleLine="true" />

    </LinearLayout>
</ScrollView>


